[package]
name = "crossbow_metrics"
version = "0.1.0"
edition = "2024"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]
license = "ISC"
description = "A network metrics collector for OmniOS"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.3"
log = "0.4.21"
nix = "0.28.0"
postgres-types = "0.2.9"
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full", "sync"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
libc = "0.2.171"
